# Raketa

./: .gitignore  CMakeLists.txt  Readme.md  generate_randoms.py  main.cxx
include/: SieveOfEratosthenes.hpp
src/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp
